# Makefile.am - GnuPG 4 Windows Makefile for Logos.
# Copyright (C) 2005 g10 Code GmbH
# 
# This file is part of GPG4Win.
# 
# GPG4Win is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# GPG4Win is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST = claws-mail-nsis-header-install-150x57.bmp    \
             claws-mail-nsis-header-uninstall-150x57.bmp  \
             claws-mail-nsis-install.ico		       \
             claws-mail-nsis-uninstall.ico		       \
             claws-mail-nsis-wizard-install-164x314.bmp   \
             claws-mail-nsis-wizard-uninstall-164x314.bmp
